ingress/yaml/ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  #tls:
  #  - hosts:
  #      - plex.khoyi.io
  #    secretName: plex-cert
  backend:
    serviceName: plex
    servicePort: 32400
  rules:
    - host: badwolf.khoyi.io
      http:
        paths:
          - path: /
            backend:
              serviceName: plex
              servicePort: 32400
